Major changes in 3.22.1:
* Ablility to change months/years through mouse and touchpad scroll
* A huge number of bugfixes
* Many memory leaks were fixed (Victor Toso)
* Updated translations for:
    * Arabic (Khaled Hosny)
    * Croatian (gogo)

Major changes in 3.22.0:
* Updated translations for:
    * Basque (Inaki Larranaga Murgoitio)
    * Danish (Alan Mortensen)
    * Greek (Tom Tryfonidis)
    * Russian (Stas Solovey)
    * Ukranian (Daniel Korostil)

Major changes in 3.21.92:
* Fix compiler warning (Dominique Leuenberger)
* Fix various places to work with Gtk+ 3.21.6
* Forbid dragging read-only events
* Updates translations for:
    * British English (David King)
    * Dutch (Hannie Dumoleyn)
    * French (Charles Monzat)
    * Gaelic (Fran Dieguez)
    * Korean (Seong-ho Cho)
    * Latvian (Rūdolfs Mazurs)
    * Lithuanian (Aurimas Černius)
    * Persian (Arash Mousavi)
    * Portuguese (Tiago Santos)
    * Scottish Gaelic (GunChleoc)
    * Swedish (Anders Jonsson)

Major changes in 3.21.91:
* Updated translations for:
    * Brazilian Portuguese (Enrico Nicoletto)
    * Catalan (Jordi Mas)
    * Czech (Marek Černocký)
    * Finnish (Jiri Grönroos)
    * French (Alexandre Franke)
    * Friulian (Fabio Tomat)
    * German (Mario Blättermann)
    * Hebrew (Yosef Or Boczko)
    * Hungarian (Balázs Úr)
    * Indonesian (Andika Triwidada)
    * Kazakh (Baurzhan Muftakhidinov)
    * Lithuanian (Aurimas Černius)
    * Polish (Piotr Drąg)
    * Portuguese (Tiago Santos)
    * Serbian (Мирослав Николић)
    * Slovak (Dušan Kazik)
    * Spanish (Daniel Mustieles)
    * Thai (Akom Chotiphantawanon)
* New date chooser calendar
* Deprecate GNOME_COMPILE_WARNINGS (Ernestas Kulik)

Major changes in 3.21.4:
* Updated translations for:
    * Arabic (Safa Alfulaij)
    * Chinese (Taiwan) (Chao-Hsiung Liao)
    * Friulian (Fabio Tomat)
    * German (Christian Kirbach)
    * Spanish (Daniel Mustieles)
    * Slovak (Dušan Kazik)
* Share the 'show-weekdate' with GNOME Shell